--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Jazil Jaman | UX|UI Developer</title>
      
 
-       <link rel="icon" href="http://www.onlinewebfonts.com"> >
+       <link rel="icon" href="images/favicon.ico" type="ico/gif" >
 
         <!--Bootstrap Css-->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
@@ -94,7 +94,7 @@
                             <div class="col-lg-12">
                                 <div class="text-center header-content mx-auto">
                                     <h4 class="text-white first-title mb-4">Welcome</h4>
-                                    <h1 class="header-name text-white text-capitalize mb-0">I'M <span class="simple-text-rotate font-weight-bold">Jazil Jaman., UX|UI Developer.,UX|UI Developer.,</span></h1>
+                                    <h1 class="header-name text-white text-capitalize mb-0">I'M <span class="simple-text-rotate font-weight-bold">Jazil Jaman., An Engineer.,An Engineer.,UX|UI Developer.,UX|UI Developer.,</span></h1>
                                     <p class="text-white mx-auto header-desc mt-4">Front End Developer who focuses on writing clean, elegent and efficient code</p>
                                     <div class="mt-4 pt-2">
                                         <a href="#" class="btn btn-outline-custom btn-round">Download Cv</a>
@@ -542,7 +542,7 @@
                 <div class="row mt-5">
                     <div class="col-lg-12">
                         <div class="form-kerri">
-                            <form>
+                            <form action="mail.php">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group mt-2">
@@ -662,7 +662,7 @@
                 speed: 3500
             });
         </script>
-	<!--Start of Tawk.to Script-->
+		<!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
